# genmed-bench

./: .gitignore  README.md  dvc.yaml  main.py  pyproject.toml  train.py
configs/: config.yaml  models.yaml
data/mean_std_stats/: covidx.npy  nih.npy  vinbigdata.npy
data/processed/covidx/: .gitignore  covidx.lmdb.dvc  covidx_all.parquet.dvc  covidx_test.parquet.dvc  covidx_train.parquet.dvc  covidx_val.parquet.dvc
data/processed/nih/: .gitignore  nih_bbox.parquet.dvc  nih_labels.parquet.dvc
data/processed/vinbigdata/: .gitignore  vinbigdata_all.parquet.dvc  vinbigdata_test.parquet.dvc  vinbigdata_train.parquet.dvc
docs/: ADDING_MODELS_AND_AUGMENTATIONS.md  ADDING_NEW_DATASET.md  CONFIGURATION.md  DVC_GUIDE.md  REPRODUCIBILITY.md  TRAINING_TIPS.md
runs/vit_small_patch16_linear_probe_xdomainmix_nih_20260128_183207/: config.yaml  system_stats.csv  train_metrics.csv  val_metrics.csv
scripts/: compute_stats.py  create_splits.py  data_check.py  prepare_data.py  prepare_metadata.py
src/data/: data_convert.py  dataset.py
src/data/augmentation/: __init__.py  augmentations_details.md  pipmix.py  xdomainmix.py
src/data/converters/: lmdb_convert.py  process_image.py
src/data/dataset/: __init__.py  covidx_dataset.py  dataset.py  lmdb_dataset.py  nih_chestxray_dataset.py  ssl_dataset.py  vinbigdata_dataset.py
src/models/: __init__.py  backbone.py  classifier.py
src/train/: __init__.py  experiment_logger.py  trainer_base.py  trainer_sup.py
src/utils/: __init__.py  logging.py  metrics.py  seed.py  system_monitor.py
